# qsi_semiclassics

./: .gitignore  README.md  meson.build
driver/: .gitignore  bench.slurm  example_job.slurm  generate_slurmfile.sh  plan_static_corr.sh  runme.slurm  static_corr.plan  temps
driver/slurm_templates/: default.sh  default.slurm  header.slurm  julia.sh  julia.slurm  python.sh
include/: meson.build
include/common/: DO_QSI.hh  basic_parser.hh  debug.hh  defect_strategy.hh  direction.hh  misc.hh  parallel_io.hh  random.hh  seed.hh  vec3.hh
include/manager/: magnetic_manager.hh  spin_manager.hh
include/struct/: corrtypes.hh  dynamic_correlator.hh  fourier.hh  plaq.hh  ptetra.hh  qsi.hh  spin.hh  static_correlator.hh  tetra.hh  util.hh
input/SSF/: big.toml  medium.toml  small.toml  test.toml
input/defect_SSF/: get_gs.toml  save-state.toml  test.toml
src/: Makefile  anneal.cc  average.cc  bb_plot.cc  coulomblaw.cc  coulomblaw_novison.cc  couplingfile_from_diluted.cc  generate_couplings.cc  generate_defect_DOQSI.cc  generate_initialiser.cc  gs_ZnS.cc  meson.build  paramagnet.cc  path.cc  print_positions.cc  qsi_defect_dynamic.cc  qsi_defect_dynamic_from_file.cc  qsi_defect_static_from_file.cc  qsi_dynamic.cc  qsi_static.cc  qsi_thermal_cond.cc  randomtest.cc  spin_plot.cc  spinon_struct.cc  test_fieldcplx.cc  vison_corr.cc  web_demo.cc
src/common/: copy_binary_to_h.py  defect_strategy.cc  direction.cc  meson.build  seed.hhtemplate
src/manager/: magnetic_manager.cc  meson.build  spin_manager.cc
src/old/: GS_ansatz.cc  anneal.old.cc  autocorr.cc  autocorr_free.cc  autocorr_process.cc  autocorr_vison.cc  average2.cc  bb_lines.cc  mean_freq.cc  stat3.cc  vison_GS.cc  vison_display.cc  vison_plot.cc  vison_test.cc  vison_xyz.cc
src/struct/: dynamic_correlator.cc  fourier.cc  meson.build  plaq.cc  ptetra.cc  qsi.cc  spin.cc  static_correlator.cc  tetra.cc  util.cc
